apps/atuin/service-atuin.yaml
apiVersion: v1
kind: Service
metadata:
  name: atuin-server
  namespace: atuin
spec:
  selector:
    app: atuin-server
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
  type: ClusterIP
